Criação da introdução e experiência

--- a/index.html
+++ b/index.html
@@ -19,6 +19,35 @@
             </ul>
         </nav>
     </header>
+
+    <main class="introducao">
+        <img src="/img/perfil-dm.png" alt="Foto de perfil">
+        <div>
+            <h1>Full Stack<br>Developer</h1>
+            <p>Arroio do Meio - RS</p>
+        </div>
+    </main>
+
+    <section class="experiencia" id="experiencia" aria-label="Experiência">
+        <h2 class="subtitulo">Experiência</h2>
+        <div>
+            <p class="experiencia-texto">Trabalho com a linguagem <strong>Java</strong> no backend, e desenvolvo pequenos projetos frontend utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
+
+            <div class="empresa">
+                <span class="empresa-ano">2021</span>
+                <h3 class="empresa-titulo">Interact Solutions</h3>
+                <span class="empresa-titulo">Desenvolvedor Trainee</span>
+                <p class="empresa-texto">Na Interact Solutions, trabalho com o desenvolvimento de sistema web, utilizando principalmente a linguagem Java.</p>
+                <ul class="empresa-habilidades">
+                    <li>Java</li>
+                    <li>SQL</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
