--- a/index.html
+++ b/index.html
@@ -48,6 +48,41 @@
             </div>
         </div>
     </section>
+    <section class="formacao" id="formacao" aria-label="Formação">
+        <div class="formacao-container">
+            <h2 class="subtitulo">Formação</h2>
+
+            <div>
+                <p class="formacao-texto">
+                    Atualmente estou cursando <strong>Análise e Desenvolvimento de Sistemas</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online
+                </p>
+                <ul class="faculdade-lista">
+                    <li class="faculdade">
+                        <span class="faculdade-tipo">Graduação</span>
+                        <h3 class="faculdade-curso">Análise e Desenvolvimento de Sistemas</h3>
+                        <span class="faculdade-instituicao">Unicesumar</span>
+                    </li>
+                    <div class="formacao-extra">
+                        <div class="cursos">
+                            <h3>Cursos Intensivos</h3>
+                            <ul>
+                                <li>Java POO - Udemy <span>50h</span> </li>
+                                <li>Front End para Iniciantes - Origamid <span>23h</span> </li>
+                                <li>Inglês Mairo Vergara <span>--</span> </li>
+                            </ul>
+                        </div>
+                        <div class="idiomas">
+                            <h3>Idiomas</h3>
+                            <ul>
+                                <li>Inglês <span>/ Básico</span> </li>
+                                <li>Português <span>/ Fluente</span> </li>
+                            </ul>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
