--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <main class="introducao">
-        <img src="/img/perfil-dm.png" alt="Foto de perfil">
+        <img src="/img/dm-remove-borderradius.png" alt="Foto de perfil">
         <div>
             <h1>Full Stack<br>Developer</h1>
             <p>Arroio do Meio - RS</p>
@@ -83,6 +83,25 @@
             </div>
         </div>
     </section>
+    <footer class="footer" id="contato">
+        <div class="footer-container">
+            <p class="footer-texto">Entre em contato para maiores informações.</p>
+            <ul class="footer-contato">
+                <li>
+                    <p>Email</p> diego.mayolo@outlook.com
+                </li>
+                <li>
+                    <p>Fone
+                    </p>+55 51 99458-6794
+                </li>
+                <li>
+                    <p>Linkedin</p><a href="https://www.linkedin.com/in/diego-luis-mayolo-8a3a3210a/">diego-luis-mayolo-8a3a3210a</a>
+                </li>
+            </ul>
+            <p class="footer-copy">Obrigado pela visita.</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
