--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Diego Mayolo</title>
+    <meta name="description" content="Desenvolvedor Full Stack, localizado em Arroio do Meio - RS">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,7 +22,7 @@
     </header>
 
     <main class="introducao">
-        <img src="/img/dm-remove-borderradius.png" alt="Foto de perfil">
+        <img src="/img/dm-remove-borderradius.png" alt="Foto de perfil" width="195" height="320">
         <div>
             <h1>Full Stack<br>Developer</h1>
             <p>Arroio do Meio - RS</p>
