--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfólio Diego Mayolo</title>
     <meta name="description" content="Desenvolvedor Full Stack, localizado em Arroio do Meio - RS">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
