--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Desenvolvedor Full Stack, localizado em Arroio do Meio - RS">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,14 +29,14 @@
         <img src="/img/dm-remove-borderradius.png" alt="Foto de perfil" width="195" height="320">
         <div>
             <h1>Full Stack<br>Developer</h1>
-            <p>Arroio do Meio - RS</p>
+            <p>Arroio do Meio - RS 🧉</p>
         </div>
     </main>
 
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 class="subtitulo">Experiência</h2>
         <div>
-            <p class="experiencia-texto">Trabalho com a linguagem <strong>Java</strong> no backend, e desenvolvo pequenos projetos frontend utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
+            <p class="experiencia-texto">Trabalho com a linguagem <strong>Java</strong>, <strong>SQL</strong>, e desenvolvo pequenos projetos frontend utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
 
             <div class="empresa">
                 <span class="empresa-ano">2021</span>
