Ajuste no tamanho das fontes/svg e criado link para contato por email

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                     <p>Linkedin</p><a href="https://www.linkedin.com/in/diego-luis-mayolo-8a3a3210a/">diego-luis-mayolo-8a3a3210a</a>
                 </li>
             </ul>
-            <p class="footer-copy">Obrigado pela visita.</p>
+            <p class="footer-copy"><span>Created By <a class="link-email" href="mailto:diego.mayolo@outlook.com">Diego Luis Mayolo</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+
         </div>
 
     </footer>
