--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <p class="footer-texto">Entre em contato para maiores informações.</p>
             <ul class="footer-contato">
                 <li>
-                    <p>Email</p> diego.mayolo@outlook.com
+                    <p>Email</p> <a class="link-email" href="mailto:diego.mayolo@outlook.com">diego.mayolo@outlook.com</a>
                 </li>
                 <li>
                     <p>Fone
