atualização de telefone

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </li>
                 <li>
                     <p>Fone
-                    </p>+55 51 99458-6794
+                    </p><a href="tel:+5551994586794">+55 51 99458-6794</a>
                 </li>
                 <li>
                     <p>Linkedin</p><a href="https://www.linkedin.com/in/diego-luis-mayolo-8a3a3210a/">diego-luis-mayolo-8a3a3210a</a>
