Mudança de layout no contato, adicionado novos svg

--- a/index.html
+++ b/index.html
@@ -89,21 +89,29 @@
         </div>
     </section>
     <footer class="footer" id="contato">
-        <div class="footer-container">
-            <p class="footer-texto">Entre em contato para maiores informações.</p>
-            <ul class="footer-contato">
+        <div class="contato footer-container">
+            <p class="footer-texto">Entre em contato para maiores informações<span>.</span></p>
+            <!-- <ul class="footer-contato">
                 <li>
                     <p>Email</p> <a class="link-email" href="mailto:diego.mayolo@outlook.com">diego.mayolo@outlook.com</a>
                 </li>
                 <li>
-                    <p>Fone
-                    </p><a href="tel:+5551994586794">+55 51 99458-6794</a>
+                    <p>Fone</p><a href="tel:+5551994586794">+55 51 99458-6794</a>
                 </li>
                 <li>
                     <p>Linkedin</p><a href="https://www.linkedin.com/in/diego-luis-mayolo-8a3a3210a/">diego-luis-mayolo-8a3a3210a</a>
                 </li>
-            </ul>
-            <p class="footer-copy"><span>Created By <a class="link-email" href="mailto:diego.mayolo@outlook.com">Diego Luis Mayolo</a> © <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+            </ul> -->
+
+            <address class="footer-contato">
+                <li><a class="link-email" href="mailto:diego.mayolo@outlook.com">diego.mayolo@outlook.com</a>
+                </li>
+                <li><a href="tel:+5551994586794">+55 51 99458-6794</a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/diego-luis-mayolo-8a3a3210a/">diego-luis-mayolo-8a3a3210a</a>
+                </li>
+            </address>
+            <p class="footer-copy"><span>Created By <a href="mailto:diego.mayolo@outlook.com">Diego Luis Mayolo</a> © <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
 
         </div>
 
