Alterado link de acesso ao linkedin

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li><a href="mailto:diego.mayolo@outlook.com"><img src="/img/email-40px.svg" /><span>diego.mayolo@outlook.com</span></a></li>
                 <li><a href="tel:+5551994586794"><img src="/img/telefone-40px.svg" /><span>+55 51 99458-6794</span></a></li>
                 <li><a href="https://github.com/diegomayolo"><img src="/img/github-40px.svg" /><span>github.com/diegomayolo</span></a></li>
-                <li><a href="https://www.linkedin.com/in/diego-luis-mayolo-8a3a3210a/"><img src="/img/linkedin-45px.svg" /><span>diego-luis-mayolo-8a3a3210a</span></a></li>
+                <li><a href="https://www.linkedin.com/in/diegomayolo/"><img src="/img/linkedin-45px.svg" /><span>linkedin.com/in/diegomayolo</span></a></li>
             </div>
             <p class="footer-copy"><span>Created By <a href="mailto:diego.mayolo@outlook.com">Diego Luis Mayolo</a> © <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
         </div>
