animacao com plugin externo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header">
             <img src="/img/diego-mayolo-36px-white.svg" alt="Marca">
             <nav>
-                <ul class="header-menu">
+                <ul class="header-menu fadeInRight" data-anime="200">
                     <li><a href="#experiencia">Experiência</a></li>
                     <li><a href="#formacao">Formação</a></li>
                     <li><a href="#contato">Contato</a></li>
@@ -29,9 +29,9 @@
 
     <main class="introducao">
         <div class="img-container">
-            <img src="/img/dm-remove-borderradius.png" alt="Foto de perfil" width="195" height="320">
+            <img class="fadeInUp" data-anime="400" src="/img/dm-remove-borderradius.png" alt="Foto de perfil" width="195" height="320">
         </div>
-        <div class="img-container">
+        <div class="img-container fadeInRight" data-anime="600">
             <h1>Full Stack<br>Developer</h1>
             <p>Arroio do Meio - RS 🧉</p>
         </div>
@@ -105,6 +105,9 @@
         </div>
 
     </footer>
+
+    <script src="/js/plugins/simple-anime.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
