--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"> -->
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -20,6 +20,20 @@
         <header class="header" id="header">
             <img src="/img/diego-mayolo-36px-white.svg" alt="Marca">
             <nav>
+                <div class="iconmenu">
+                    <div class="iconopen close">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="nav navshow">
+                    <div class="menu">
+                        <a class="menu-item" href="#experiencia">experiencia</a>
+                        <a class="menu-item" href="#formacao">formacao</a>
+                        <a class="menu-item" href="#contato">contato</a>
+                    </div>
+                </div>
+            </nav>
+            <nav class="nav-buttons">
                 <a href="#experiencia">
                     <button class="btn-header">
                         <span></span>
@@ -48,6 +62,7 @@
         </header>
     </header>
 
+
     <main class="introducao">
         <div class="img-container">
             <img src="/img/dm-remove-borderradius.png" alt="Foto de perfil" width="195" height="320">
@@ -61,7 +76,7 @@
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 data-anime="left" class="subtitulo">Experiência</h2>
         <div>
-            <p data-anime="down" class="experiencia-texto">Trabalho com a linguagem <strong>Java</strong>, <strong>SQL</strong>, e desenvolvo pequenos projetos frontend utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
+            <p data-anime="right" class="experiencia-texto">Trabalho com a linguagem <strong>Java</strong>, <strong>SQL</strong>, e desenvolvo pequenos projetos frontend utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
 
             <div data-anime="right" class="empresa">
                 <span class="empresa-ano">2021</span>
@@ -83,7 +98,7 @@
         <div data-anime="left" class=" formacao-container">
             <h2 class="subtitulo">Formação</h2>
 
-            <div>
+            <div data-anime2="right">
                 <p class="formacao-texto">
                     Atualmente estou cursando <strong>Análise e Desenvolvimento de Sistemas</strong>. Além disso, me mantenho sempre atualizado com cursos intensivos online
                 </p>
@@ -98,11 +113,11 @@
                     <div class="cursos">
                         <h3>Cursos Intensivos</h3>
                         <ul>
-                            <li>Java POO - Udemy <span>50h</span> </li>
-                            <li>HTML e CSS para iniciantes - Origamid <span>46h</span> </li>
-                            <li>Javascript do básico ao avançado com Node - Udemy <span>22.5h</span> </li>
-                            <li>React Completo - Origamid <span>36h</span> </li>
-                            <li>Inglês Mairo Vergara <span>--</span> </li>
+                            <li class="hvr-icon-pulse-grow">Java POO - Udemy <span class="hvr-icon">50h</span> </li>
+                            <li class="hvr-icon-pulse-grow">HTML e CSS para iniciantes - Origamid <span class="hvr-icon">46h</span> </li>
+                            <li class="hvr-icon-pulse-grow">Javascript do básico ao avançado com Node - Udemy <span class="hvr-icon">22.5h</span> </li>
+                            <li class="hvr-icon-pulse-grow">React Completo - Origamid <span class="hvr-icon">36h</span> </li>
+                            <li class="hvr-icon-pulse-grow">Inglês Mairo Vergara <span class="hvr-icon">--</span> </li>
                         </ul>
                     </div>
                     <div class="idiomas">
@@ -117,14 +132,14 @@
         </div>
     </section>
 
-    <!-- <footer class="footer" id="contato">
+    <footer class="footer" id="contato">
         <div class="contato footer-container">
             <section id="contact">
-                <div data-anime="right" class="contact-wrapper">
-                    Left contact page
+                <div data-anime="left" class="contact-wrapper">
+                    <!-- Left contact page -->
                     <form id="contact-form" class="form-horizontal" role="form">
                         <div class="name-and-email">
-                            name input
+                            <!-- name input -->
                             <div class="form-group">
                                 <div class="input-group">
                                     <label class="form-label">Name</label>
@@ -132,7 +147,7 @@
                                 </div>
                             </div>
 
-                            email input
+                            <!-- email input -->
                             <div class="form-group">
                                 <div class="input-group">
                                     <label class="form-label">Email</label>
@@ -141,7 +156,7 @@
                             </div>
                         </div>
 
-                        subject input
+                        <!-- subject input -->
                         <div class="form-group">
                             <div class="input-group">
                                 <label class="form-label">Subject</label>
@@ -149,7 +164,7 @@
                             </div>
                         </div>
 
-                        message content
+                        <!-- message content -->
                         <div class="form-group">
                             <div class="input-group">
                                 <label class="form-label">Email</label>
@@ -157,7 +172,7 @@
                             </div>
                         </div>
 
-                        send button
+                        <!-- send button -->
                         <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
                             <div class="alt-send-button">
                                 <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
@@ -165,8 +180,8 @@
                         </button>
                     </form>
 
-                    Right contact page
-                    <div data-anime="right" class="direct-contact-container">
+                    <!-- Right contact page -->
+                    <div class="direct-contact-container">
                         <ul class="contact-list">
                             <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">Arroio do Meio, RS</span></i></li>
                             <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a href="tel:+555194586794" title="Give me a call">+55 51 99458-6794</a></span></i></li>
@@ -193,28 +208,26 @@
                     </div>
                 </div>
 
-                <div data-anime="right" class="back-to-top">
-                    <a href="#header">
-                        <button class="btn-back-to-top">
-                            <div class="text">
-                                <span>Back</span>
-                                <span>to</span>
-                                <span>top</span>
-                            </div>
-                            <div class="clone">
-                                <span>Back</span>
-                                <span>to</span>
-                                <span>top</span>
-                            </div>
-                            <svg width="20px" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
-                            </svg>
-                        </button>
-                    </a>
+                <div id="scrollme" data-anime="right" class="back-to-top">
+                    <button class="btn-back-to-top">
+                        <div class="text">
+                            <span>Back</span>
+                            <span>to</span>
+                            <span>top</span>
+                        </div>
+                        <div class="clone">
+                            <span>Back</span>
+                            <span>to</span>
+                            <span>top</span>
+                        </div>
+                        <svg width="20px" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                        </svg>
+                    </button>
                 </div>
             </section>
         </div>
-    </footer>  -->
+    </footer>
     <!-- scripts -->
     <script src="js/plugins/clipboard.min.js"></script>
     <script src="js/script.js"></script>
