--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -19,46 +18,47 @@
     <header class="header-bg">
         <header class="header" id="header">
             <img src="/img/diego-mayolo-36px-white.svg" alt="Marca">
-            <nav>
-                <div class="iconmenu">
-                    <div class="iconopen close">
-                        <span></span>
+            <div>
+                <nav>
+                    <div class="nav navshow">
+                        <div class="menu">
+                            <a class="menu-item" href="#experiencia">experiencia</a>
+                            <a class="menu-item" href="#formacao">formacao</a>
+                            <a class="menu-item" href="#contato">contato</a>
+                        </div>
                     </div>
+                </nav>
+
+                <nav class="nav-buttons">
+                    <a href="#experiencia">
+                        <button class="btn-header">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span> Experiência
+                        </button>
+                    </a>
+                    <a href="#formacao">
+                        <button class="btn-header">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span> Formação
+                        </button>
+                    </a>
+                    <a href="#contato">
+                        <button class="btn-header">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span> Contato
+                        </button>
+                    </a>
+                </nav>
+                <div class="button-expand">
+                    <i class="fa-solid fa-angle-down"></i>
                 </div>
-                <div class="nav navshow">
-                    <div class="menu">
-                        <a class="menu-item" href="#experiencia">experiencia</a>
-                        <a class="menu-item" href="#formacao">formacao</a>
-                        <a class="menu-item" href="#contato">contato</a>
-                    </div>
-                </div>
-            </nav>
-            <nav class="nav-buttons">
-                <a href="#experiencia">
-                    <button class="btn-header">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span> Experiência
-                    </button>
-                </a>
-                <a href="#formacao">
-                    <button class="btn-header">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span> Formação
-                    </button>
-                </a>
-                <a href="#contato">
-                    <button class="btn-header">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span> Contato
-                    </button>
-                </a>
-            </nav>
+            </div>
         </header>
     </header>
 
@@ -74,9 +74,9 @@
     </main>
 
     <section class="experiencia" id="experiencia" aria-label="Experiência">
-        <h2 data-anime="left" class="subtitulo">Experiência</h2>
+        <h2 class="subtitulo">Experiência</h2>
         <div>
-            <p data-anime="right" class="experiencia-texto">Trabalho com a linguagem <strong>Java</strong>, <strong>SQL</strong>, e desenvolvo pequenos projetos frontend utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
+            <p class="experiencia-texto">Trabalho com a linguagem <strong>Java</strong>, <strong>SQL</strong>, e desenvolvo pequenos projetos frontend utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
 
             <div data-anime="right" class="empresa">
                 <span class="empresa-ano">2021</span>
@@ -149,9 +149,10 @@
 
                             <!-- email input -->
                             <div class="form-group">
-                                <div class="input-group">
-                                    <label class="form-label">Email</label>
-                                    <input class="input-field" required type="email" name="email" id="email" autocomplete="on">
+                                <div class="input-group email-group">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input class="input-field" required type="email" name="email" id="email" autocomplete="on" onkeyup="validateEmail()">
+                                    <p id="validate-result"></p>
                                 </div>
                             </div>
                         </div>
@@ -167,7 +168,7 @@
                         <!-- message content -->
                         <div class="form-group">
                             <div class="input-group">
-                                <label class="form-label">Email</label>
+                                <label class="form-label">Message</label>
                                 <textarea class="textarea input-field" rows="6" placeholder="Feel free to clear your doubts..." name="message" required></textarea>
                             </div>
                         </div>
